<resources>
    <string name="app_name">Guanaco Business</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Nombre de usuario</string>
    <string name="login">Iniciar</string>
    <string name="password">Contraseña</string>
    <string name="update_password">¿No recuerdas tu contraseña?</string>
    <string name="sign_up_question">¿Aún no tienes una cuenta?</string>
    <string name="sign_up">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Nombre Completo</string>
    <string name="email">Correo Electrónico</string>
    <string name="register_terms">Acepto los términos y condiciones</string>
    <string name="register">Registrarse</string>
    <string name="photo_register">Foto de perfil</string>
    <string name="upload_photo">Subir foto</string>
    <string name="cancel">Cancelar</string>
    <string name="profession">Profesión</string>
    <string name="finish">Finalizar</string>
    <string name="forgotpass_message">Te enviaremos tu codigo de seguridad a tu dirección de correo electrónico</string>
    <string name="forgotpass_continue">Continuar</string>
    <string name="forgotpass_code_message">Ingresa el código de 4 dígitos que recibiste en la dirección de correo electónico.</string>
    <string name="forgotpass_code_hint">Codigo</string>
    <string name="forgotpass_new_message">Ingresa la nueva contraseña que reemplazara a la anterior</string>
    <string name="new_pass">Nueva Contraseña</string>
    <string name="confirm_pass">Confirmar Contraseña</string>
    <string name="search">Buscar</string>
    <string name="salary">Salario</string>
    <string name="location">Ubicación</string>
    <string name="work_type">Área de trabajo</string>
    <string name="ok">Aceptar</string>
    <string name="homepage">Principal</string>
    <string name="messages">Mensajería</string>
    <string name="profile">Perfil</string>
    <string name="omitir">Omitir</string>
    <string name="low_salary">Salario Bajo</string>
    <string name="medium_salary">Salario Medio</string>
    <string name="high_salary">Salario Alto</string>
    <string name="add_button_message">Publicar</string>
    <string name="urlImageAddJob">URL imagen</string>
    <string name="titleAddJob">Titulo Vacante</string>
    <string name="descAddJob">Descripción</string>
    <string name="scheduleAddJob">Horario</string>
    <string name="requisitesAddJob">Requisitos</string>
    <string name="navBarOffers">Todas las Ofertas</string>
    <string name="navBarAplicatedOffers">Ofertas Aplicadas</string>
    <string name="navBarRequest">Solicitudes</string>
    <string name="navBarCV">Curriculum Vitae</string>
    <string name="navBarMyOffers">Mis publicaciones</string>
    <string name="navBarLogOut">Cerrar Sesion</string>
    <string name="company">Company</string>
    <string name="addCV">Agregar CV</string>
    <string name="full_nameCV">Nombre completo</string>
    <string name="gender">Género</string>
    <string name="emailCV">Correo Electrónico</string>
    <string name="addressCV">Dirección</string>
    <string name="experienceCV">Experiencia Laboral</string>
    <string name="abilities">Habilidades</string>
    <string name="languages">Idiomas</string>
    <string name="edit_btn_message">Editar</string>
</resources>
