<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_forgotpass_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.ForgotPassNewFragment">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/width_logo"
        android:layout_height="@dimen/height_logo"
        android:layout_marginTop="@dimen/large_gap"
        android:src="@drawable/guanaco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotpass_newpass_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/large_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:text="@string/forgotpass_new_message"
        app:layout_constraintEnd_toEndOf="@+id/app_logo"
        app:layout_constraintStart_toStartOf="@+id/app_logo"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotpass_newpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/large_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:hint="@string/new_pass"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotpass_newpass_message">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/app_logo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotpass_confirmpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/large_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:hint="@string/confirm_pass"
        android:visibility="visible"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotpass_newpass"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/app_logo" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgotpass_continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/large_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:paddingHorizontal="@dimen/padding_horizontal_buttons"
        android:text="@string/forgotpass_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotpass_confirmpass" />

</androidx.constraintlayout.widget.ConstraintLayout>