<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        tools:context=".RegisterPhotoFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_photo_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_gap"
            android:layout_marginTop="@dimen/xxl_gap"
            android:layout_marginEnd="@dimen/medium_gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- Media -->
                <ImageView
                    android:id="@+id/photo_register"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:contentDescription="@string/photo_register"
                    android:src="@drawable/guanaco" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/button_photo_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_gap"
            android:layout_marginTop="@dimen/large_gap"
            android:layout_marginEnd="@dimen/small_gap"
            android:paddingHorizontal="@dimen/padding_horizontal_buttons"
            android:text="@string/upload_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_photo_register" />

        <Button
            android:id="@+id/button_skip_photo"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_gap"
            android:text="@string/omitir"
            app:layout_constraintEnd_toEndOf="@+id/button_photo_register"
            app:layout_constraintStart_toStartOf="@+id/button_photo_register"
            app:layout_constraintTop_toBottomOf="@+id/button_photo_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>