<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddJobOfferFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout_AddJob2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar_AddJob2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow_back_24" />

        </com.google.android.material.appbar.AppBarLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jobCompanyAddJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_gap"
            android:layout_marginTop="@dimen/large_gap"
            android:layout_marginEnd="@dimen/medium_gap"
            android:hint="@string/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout_AddJob2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jobCompanyAddJobEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jobRequisitesAddJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_gap"
            android:layout_marginTop="@dimen/large_gap"
            android:layout_marginEnd="@dimen/medium_gap"
            android:hint="@string/requisitesAddJob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobCompanyAddJob">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jobRequisitesAddJobEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Profession_Dropdown_Container"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_gap"
            android:layout_marginTop="@dimen/large_gap"
            android:layout_marginEnd="@dimen/medium_gap"
            android:hint="@string/profession"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jobRequisitesAddJob">

            <AutoCompleteTextView
                android:id="@+id/ProfessionDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:simpleItems="@array/professions"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Department_Dropdown_Container"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_gap"
            android:layout_marginTop="@dimen/large_gap"
            android:layout_marginEnd="@dimen/medium_gap"
            android:hint="@string/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Profession_Dropdown_Container">

            <AutoCompleteTextView
                android:id="@+id/DepartmentDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:simpleItems="@array/locations"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/AddJob_finish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_gap"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="@dimen/medium_gap"
            android:paddingHorizontal="@dimen/padding_horizontal_buttons"
            android:text="@string/finish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Profession_Dropdown_Container" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>